--- a/_config.yml
+++ b/_config.yml
@@ -5,12 +5,13 @@ permalink: /:categories/:year/:month/:day/:title
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
+markdown: maruku
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Ms. Van Cleve
-tagline: Math Teacher
+title : jmv.me
+tagline: 
 author :
   name : Julia Van Cleve
   email : jmvancleve@gmail.com
